Add cell size item
Add cell size detail variable to configuration detail list.

--- a/mysite/caconsole/templates/caconsole/config_detail.html
+++ b/mysite/caconsole/templates/caconsole/config_detail.html
@@ -5,6 +5,7 @@
 <ul>
 <li>Name: {{ configuration.name }}</li>
 <li>Screen Size: {{ configuration.screen_size }}</li>
+<li>Cell Size: {{ configuration.cell_size }}</li>
 <li>Ruleset: {{ configuration.ruleset_name }}</li>
 <li>Image: {{ configuration.seed_image_path }}</li>
 </ul>
